Fix alignment of edit menu options; Set autoFocus on first menu option

--- a/ui/src/ReusableComponents/EditMenu.scss
+++ b/ui/src/ReusableComponents/EditMenu.scss
@@ -35,6 +35,7 @@
     margin: 10px;
     display: flex;
     align-items: center;
+    text-align: left;
     background: none;
     font-size: inherit;
     font-weight: inherit;
